# mktorrent

./: .gitignore  CMakeLists.txt  CMakePresets.json  hash.c  hash_pthreads.c
.github/workflows/: build.yaml
